--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "server": "nodemon src/express.js"
+    "server": "nodemon Express/expressMain.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "core-js": "^3.23.2",
     "esbuild": "^0.14.47",
     "express": "^4.18.1",
